// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component snapshot tests should render CurrentConditions component 1`] = `
<div
  className="container is-fluid"
>
  <div
    className="columns is-multiline is-centered"
  >
    <div
      className="column is-one-third has-text-centered"
    >
      <LocationView
        conditions={
          Object {
            "error": null,
            "icon": null,
            "location": null,
            "temperature": null,
            "weather": null,
          }
        }
      />
      <SelectLocation
        handleGetConditions={[Function]}
      />
    </div>
    <div
      className="column is-one-third has-text-centered"
    >
      <LocationView
        conditions={
          Object {
            "error": null,
            "icon": null,
            "location": null,
            "temperature": null,
            "weather": null,
          }
        }
      />
      <SelectLocation
        handleGetConditions={[Function]}
      />
    </div>
    <div
      className="column is-12 has-text-centered"
    >
      <TemperatureDifference
        locationA={null}
        locationB={null}
        temperatureA={null}
        temperatureB={null}
      />
    </div>
  </div>
</div>
`;

exports[`component snapshot tests should render LocationView component 1`] = `
<div
  className="box is-offset-2"
>
  <div>
    <h1
      className="title is-4 has-text-grey"
    >
      test
    </h1>
    <h1
      className="title is-4 has-text-grey"
    >
      test
    </h1>
    <h1
      className="subtitle has-text-info"
    >
      70 ℉
    </h1>
    <br />
  </div>
</div>
`;

exports[`component snapshot tests should render SelectLocation component 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="field"
  >
    <div
      className="control"
    >
      <input
        className="input is-small"
        name="zip"
        placeholder="enter zip-code"
        type="text"
      />
    </div>
  </div>
  <button
    className="button is-small is-info"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`component snapshot tests should render TemperatureDifference component 1`] = `
<div
  className="container has-text-centered"
>
  <h1
    className="title is-4 has-text-grey"
  >
    Temperature difference between test and test: 
  </h1>
  <p
    className="subtitle has-text-info"
  >
    null degrees
  </p>
</div>
`;
